eliminated some hardcoded string literals

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@android:style/TextAppearance.Large"
-        android:text="Span"
+        android:text="@string/span_label"
         android:id="@+id/textViewSpanLabel"
         android:gravity="right"
         android:layout_below="@+id/radioGroup"
@@ -76,7 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="m"
+        android:text="@string/span_units_si"
         android:id="@+id/textViewSpanUnits"
         android:layout_alignBaseline="@+id/editTextSpan"
         android:layout_toRightOf="@+id/editTextSpan"
@@ -87,7 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Trib Width"
+        android:text="@string/tribwidth_label"
         android:id="@+id/textViewTribLabel"
         android:paddingTop="8dp"
         android:layout_below="@+id/textViewSpanLabel"
@@ -116,7 +116,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="m"
+        android:text="@string/tribwidth_units_si"
         android:id="@+id/textViewTribUnits"
         android:layout_toRightOf="@+id/editTextTrib"
         android:layout_alignBaseline="@+id/editTextTrib"
@@ -128,7 +128,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Dead (UDL)"
+        android:text="@string/deadUDL_label"
         android:id="@+id/textViewDeadLabel"
         android:gravity="right"
         android:layout_below="@+id/textViewTribLabel"
@@ -157,7 +157,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="kPa"
+        android:text="@string/deadUDL_units_si"
         android:id="@+id/textViewDeadUnits"
         android:layout_centerHorizontal="true"
         android:layout_alignBaseline="@+id/editTextDead"
@@ -170,7 +170,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Live (UDL)"
+        android:text="@string/liveUDL_label"
         android:id="@+id/textViewLiveLabel"
         android:layout_below="@+id/textViewDeadLabel"
         android:layout_toLeftOf="@+id/editTextDead"
@@ -200,7 +200,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="kPa"
+        android:text="@string/liveUDL_units_si"
         android:id="@+id/textViewLiveUnits"
         android:layout_alignStart="@+id/textViewDeadUnits"
         android:layout_alignBaseline="@+id/editTextLive"
@@ -213,7 +213,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="LL Defln L/"
+        android:text="@string/deflnRatio_label"
         android:id="@+id/textViewDeflnLabel"
         android:layout_centerVertical="true"
         android:layout_below="@+id/textViewLiveLabel"
@@ -258,7 +258,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="mm"
+        android:text="@string/defln_units_si"
         android:id="@+id/textViewDeflnUnits"
         android:layout_marginTop="21dp"
         android:layout_alignBaseline="@+id/textViewDefln"
@@ -272,7 +272,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Mf ="
+        android:text="@string/Mf_label"
         android:id="@+id/textViewMomentLabel"
         android:gravity="right"
         android:layout_marginTop="55dp"
@@ -308,7 +308,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="kN-m"
+        android:text="@string/Mf_units_si"
         android:id="@+id/textViewMomentUnits"
         android:layout_toRightOf="@+id/textViewMoment"
         android:layout_alignBaseline="@+id/textViewMoment"
@@ -324,7 +324,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Rf ="
+        android:text="@string/Rf_label"
         android:id="@+id/textViewRxnLabel"
         android:layout_below="@+id/textViewMomentLabel"
         android:layout_toLeftOf="@+id/textViewMoment"
@@ -356,7 +356,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="kN-m"
+        android:text="@string/Rf_units_si"
         android:id="@+id/textViewReactionUnits"
         android:layout_toRightOf="@+id/textViewReaction"
         android:layout_alignBaseline="@+id/textViewReaction"
@@ -368,7 +368,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Ix ="
+        android:text="@string/Ix_label"
         android:id="@+id/textViewIxLabel"
         android:layout_below="@+id/textViewRxnLabel"
         android:layout_toLeftOf="@+id/textViewReaction"
@@ -400,7 +400,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="x10^6"
+        android:text="@string/Ix_units1_si"
         android:id="@+id/textViewIxExponent"
         android:layout_toRightOf="@+id/textViewIx"
         android:layout_alignBaseline="@+id/textViewIx"
@@ -411,7 +411,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="mm4"
+        android:text="@string/Ix_units2_si"
         android:id="@+id/textViewIxUnits"
         android:layout_toRightOf="@+id/textViewIxExponent"
         android:layout_alignBaseline="@+id/textViewIx"
